--- a/static/index2.html
+++ b/static/index2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UIPE - Empowering Innovation</title>
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="https://ams3.digitaloceanspaces.com/uipe-data/static/css/uipe.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -24,7 +26,8 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <a class="navbar-brand" href="#">
-                            <img src="img/logo.png" width="78" height="84" alt="UIPE Logo">
+                            <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/logo.png" width="78"
+                                height="84" alt="UIPE Logo">
                         </a>
                         <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5> -->
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -61,8 +64,19 @@
             </div>
         </nav>
         <!-- end navbar -->
-
-        <div class="container-lg pt-93">
+        <div class="banner">
+            <div class="banner__title">
+                Empowering Innovation through <span>Engineering</span>
+            </div>
+            <div class="banner__subtitle">
+                Join us in shaping the future of Uganda through Engineering innovation
+            </div>
+            <div class="banner__btns">
+                <a href="/projects/"><button class="_btn btn__primary_opaque">Innovations</button></a>
+                <a href="/events/"><button class="_btn btn__primary_transparent">Events</button></a>
+            </div>
+        </div>
+        <!-- <div class="banner container-lg pt-93">
             <div class="row">
                 <div class="banner col-6">
                     <div class="banner__title">
@@ -77,8 +91,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
+    <!-- --------------EVENTS----------- -->
     <div class="container-fluid uipe-events" style="position: relative;">
         <div class="uipe-events-viewall">
             <button class="uipe-events-viewall-btn">View all</button>
@@ -155,6 +170,8 @@
             </div>
         </div>
     </div>
+
+    <!-- --------------NEWS----------- -->
     <div class="container-fluid uipe-news" style="position: relative;">
         <div class="row justify-content-center">
             <div class="col-3">
@@ -225,6 +242,8 @@
             </div>
         </div>
     </div>
+    <!-- --------------CONTACT----------- -->
+
     <div class="container-fluid uipe-contact" style="position: relative;">
         <div class="row justify-content-center">
             <div class="col-3">
@@ -247,6 +266,7 @@
             <div class="join">Join <span>10,000+</span> other engineers in our community.</div>
         </div>
     </div>
+    <!-- -------------------FOOTER---------------- -->
     <div class="container-fluid uipe-footer ">
         <div class="row mt-10">
             <div class="col-2">
@@ -273,20 +293,21 @@
                     </div>
 
                 </div>
-                <div class="row">
-                    <h3>Sponsored By</h3>
-                    <div class="col">
-                        <ul>
-                            <li style="margin-bottom: 2rem"><a href="https://raeng.org.uk//"><img
-                                        src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/rae.webp" alt=""
-                                        style="width: auto; height: 80px"></a></li>
+
+            </div>
+            <div class="row MT-0">
+                <h3>Sponsored By</h3>
+                <div class="col-6">
+                    <ul>
+                        <li ><a href="https://raeng.org.uk//"><img
+                                    src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/rae.webp" alt=""
+                                    ></a></li>
+                    </ul>
+                    <div class="col-6">
+                        <li ><a href="https://www.uws.ac.uk/"><img
+                                    src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/uws.png" alt=""
+                                    ></a></li>
                         </ul>
-                        <div class="col">
-                            <li style="width: 100%"><a href="https://www.uws.ac.uk/"><img
-                                        src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/uws.png" alt=""
-                                        style="width: auto; height: 80px"></a></li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
