edited news_about page

--- a/static/index.html
+++ b/static/index.html
@@ -175,8 +175,7 @@
                         <h5 class="card-title">Innovation and intellectual Management Bootcamp</h5>
                         <p class="card-text">Join us for an exclusive moment to discuss innovatoion</p>
                         <div class="uipe-location">
-                            <div><img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/Location.png" 
-                                alt="location"></div>
+                            <div><img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/Location.png" alt="location"></div>
                             <div class="text">Esella Country Club Hotel, Kira</div>
                         </div>
                         <div class="uipe-rsvp">
