--- a/static/news_about.html
+++ b/static/news_about.html
@@ -79,7 +79,43 @@
 
                 </div>
             </div>
-            <div class="row">
+            <div class="content">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="img-holder">
+                                <div class="heading">
+                                    <h5 class="card-title">UIPE develops a Research, Innovation and Intellectual Property
+                                        Management
+                                        Policy</h5>
+                                </div>
+                                <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
+                                <img src="https://ams3.digitaloceanspaces.com/uipe-data/media/uploads/PHOTO-2024-06-24-20-56-29.jpg"
+                                    alt="vr">
+                            </div>
+                            <div class="card-body uipe-news-card">
+                                <div class="meta">
+                                    Posted 2 days ago
+                                </div>
+                                <p class="card-text">
+                                    The Uganda Institution of Professional Engineers is developing a Research, Innovation
+                                    and
+                                    Intellectual Property Management Policy to spur research and innovation among its
+                                    members.
+                                </p>
+                                <!-- <a href="/news/uipe-develops-a-research-innovation-and-intellectual-property-management-policy"><button>Read
+                                this post</button></a> -->     
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            <div class="column">
+                <div class="lil-header">
+                    <h5 class="text">
+                        Recent Posts
+                    </h5>
+                </div>
                 <div class="col-lg-4">
                     <div class="card">
                         <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
@@ -126,32 +162,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card">
-                        <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
-                        <img src="https://ams3.digitaloceanspaces.com/uipe-data/media/uploads/PHOTO-2024-10-22-11-06-21.jpg"
-                            alt="vr">
-                        <div class="card-body uipe-news-card">
-                            <h5 class="card-title">UIPE develops a Research, Innovation and Intellectual Property
-                                Management
-                                Policy</h5>
-                            <p class="card-text">
-                                The Uganda Institution of Professional Engineers is developing a Research, Innovation
-                                and
-                                Intellectual Property Management Policy to spur research and innovation among its
-                                members.
-                            </p>
-                            <button type="button" class="btn btn-link">Read this post</button>
-                            <div class="meta">
-                                Posted 2 days ago
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
-
-
+    </div>
 
 
         <!-- -------------------FOOTER SECTION------------------------ -->
