edited recent posts

--- a/static/news_about.html
+++ b/static/news_about.html
@@ -132,8 +132,8 @@
                                 members.
                             </p>
                             <!-- <a href="/news/uipe-develops-a-research-innovation-and-intellectual-property-management-policy"><button>Read
-                            this post</button></a> -->
-                            <button type="button" class="btn btn-link">Read this post</button>
+                            this post</button></a> 
+                            <button type="button" class="btn btn-link">Read this post</button> -->
                             <div class="meta">
                                 Posted 2 days ago
                             </div>
@@ -155,7 +155,7 @@
                                 Intellectual Property Management Policy to spur research and innovation among its
                                 members.
                             </p>
-                            <button type="button" class="btn btn-link">Read this post</button>
+                            <!-- <button type="button" class="btn btn-link">Read this post</button> -->
                             <div class="meta">
                                 Posted 2 days ago
                             </div>
