--- a/static/news_about.html
+++ b/static/news_about.html
@@ -94,8 +94,13 @@
                                     alt="vr">
                             </div>
                             <div class="card-body uipe-news-card">
-                                <div class="meta">
-                                    Posted 2 days ago
+                                <div class="gray">
+                                    <div class="author">
+                                        By John Doe
+                                    </div>
+                                    <div class="meta">
+                                        Posted 2 days ago
+                                    </div>
                                 </div>
                                 <p class="card-text">
                                     The Uganda Institution of Professional Engineers is developing a Research, Innovation
