--- a/static/newslist.html
+++ b/static/newslist.html
@@ -80,13 +80,13 @@
         }
     </script>
     <div class="container-fluid uipe-events" style="position: relative;">
-        <div class="uipe-events-viewall">
+        <!-- <div class="uipe-events-viewall">
             <button class="uipe-events-viewall-btn">View all</button>
-        </div>
+        </div> -->
         <div class="row justify-content-center">
             <div class="col-3">
                 <!-- <img src="img/events.png" width="383" height="116" alt="events"> -->
-                <img src="img/title.png" >
+                <img src="img/title.png">
 
             </div>
         </div>
@@ -273,6 +273,7 @@
                 </section><!-- /Category Postst Section -->
 
                 <!-- Pagination 2 Section -->
+                 <!--
                 <section id="pagination-2" class="pagination-2 section">
 
                     <div class="container">
@@ -289,8 +290,9 @@
                             </ul>
                         </div>
                     </div>
-
+                -->
                 </section><!-- /Pagination 2 Section -->
+            
 
             </div>
 
@@ -299,6 +301,7 @@
                 <div class="widgets-container" data-aos="fade-up" data-aos-delay="200">
 
                     <!-- Search Widget -->
+                     <!--
                     <div class="search-widget widget-item">
 
                         <h3 class="widget-title">Search</h3>
@@ -307,9 +310,11 @@
                             <button type="submit" title="Search"><i class="bi bi-search"></i></button>
                         </form>
 
-                    </div><!--/Search Widget -->
+                    </div>
+                    -->
 
                     <!-- Categories Widget -->
+                    <!--
                     <div class="categories-widget widget-item">
 
                         <h3 class="widget-title">Categories</h3>
@@ -322,7 +327,9 @@
                             <li><a href="#">Educaion <span>(14)</span></a></li>
                         </ul>
 
-                    </div><!--/Categories Widget -->
+                    </div>
+                    -->
+                    <!--/Categories Widget -->
 
                     <!-- Recent Posts Widget -->
                     <div class="recent-posts-widget widget-item">
