--- a/static/newslist.html
+++ b/static/newslist.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body class="newslist-page">
     <!-- <div class="header"> -->
     <!-- start navbar -->
     <nav class="navbar navbar-expand-lg">
