--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" href="css/main.css"> -->
 </head>
 
-<body>
+<body class="index-page">
     <div class="header">
         <!-- start navbar -->
         <nav class="navbar navbar-expand-lg">
