--- a/static/index.html
+++ b/static/index.html
@@ -122,7 +122,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="uipe-events-card-wrapper">
+            <div class="col-lg-4 col-md-6">
                 <div class="card uipe-events-card">
                     <div class="date">
                         <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/Calendar.png" alt="calendar">
@@ -143,7 +144,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            </div>
+            <div class="uipe-events-card-wrapper">
+            <div class="col-lg-4 col-md-6" >
                 <div class="card uipe-events-card">
                     <div class="date">
                         <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/Calendar.png" alt="calendar">
@@ -164,7 +167,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            </div>
+            <div class="uipe-events-card-wrapper">
+            <div class="col-lg-4 col-md-6">
                 <div class="card uipe-events-card">
                     <div class="date">
                         <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/Calendar.png" alt="calendar">
@@ -183,6 +188,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
@@ -355,7 +361,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="uipe-news-card-wrapper">
+            <div class="col-lg-4 col-md-6">
                 <div class="card">
                     <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
                     <img src="https://ams3.digitaloceanspaces.com/uipe-data/media/uploads/PHOTO-2024-06-24-20-56-29.jpg"
@@ -376,7 +383,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            </div>
+            <div class="uipe-news-card-wrapper">
+            <div class="col-lg-4 col-md-6">
                 <div class="card">
                     <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
                     <img src="https://ams3.digitaloceanspaces.com/uipe-data/media/uploads/PHOTO-2024-09-13-14-48-27.jpg"
@@ -395,7 +404,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            </div>
+            <div class="uipe-news-card-wrapper">
+            <div class="col-lg-4 col-md-6">
                 <div class="card">
                     <!-- <img src="img/vr.png" class="card-img-top" alt="vr"> -->
                     <img src="https://ams3.digitaloceanspaces.com/uipe-data/media/uploads/PHOTO-2024-10-22-11-06-21.jpg"
@@ -413,6 +424,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
