--- a/static/index.html
+++ b/static/index.html
@@ -457,7 +457,7 @@
                             data-cfemail="ef86818980af9a869f8ac18c80c19a88">[email&#160;protected]</span></a></p>
             </div>
         </div>
-        <div class="footer__right">
+        <div class="footer__center">
             <div class="footer__right-quicklinks">
                 <h3>Associated Links</h3>
                 <ul>
