--- a/static/index.html
+++ b/static/index.html
@@ -457,6 +457,7 @@
                             data-cfemail="ef86818980af9a869f8ac18c80c19a88">[email&#160;protected]</span></a></p>
             </div>
         </div>
+        <div class="footer-bottom">
         <div class="footer__center">
             <div class="footer__right-quicklinks">
                 <h3>Associated Links</h3>
@@ -479,6 +480,7 @@
                                 style="width: auto; height: 80px"></a></li>
                 </ul>
             </div>
+        </div>
         </div>
     </footer>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
