--- a/static/newslist.html
+++ b/static/newslist.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="newslist-page">
+<body>
     <!-- <div class="header"> -->
     <!-- start navbar -->
     <nav class="navbar navbar-expand-lg">
@@ -424,6 +424,7 @@
                             data-cfemail="ef86818980af9a869f8ac18c80c19a88">[email&#160;protected]</span></a></p>
             </div>
         </div>
+        <div class="footer-bottom">
         <div class="footer__center">
             <div class="footer__right-quicklinks">
                 <h3>Associated Links</h3>
@@ -446,6 +447,7 @@
                                 style="width: auto; height: 80px"></a></li>
                 </ul>
             </div>
+        </div>
         </div>
     </footer>
 
