--- a/static/news_about.html
+++ b/static/news_about.html
@@ -173,43 +173,44 @@
 
 
         <!-- -------------------FOOTER SECTION------------------------ -->
-
-        <footer class="footer">
-            <div class="footer__left">
-                <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/logo.png" alt="UIPE Logo">
-                <div class="footer__left_content">
-                    <h3>Address</h3>
-                    <p>Kyambogo, Gloucester Ave</p>
-                    <p>Kampala, Uganda</p>
-                    <p>Phone: +256 414-671387</p>
-                    <p><a href="/cdn-cgi/l/email-protection#4920272f26093c20392c672a26673c2e"><span class="__cf_email__"
-                                data-cfemail="ef86818980af9a869f8ac18c80c19a88">[email&#160;protected]</span></a></p>
-                </div>
+ <footer class="footer">
+        <div class="footer__left">
+            <img src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/logo.png" alt="UIPE Logo">
+            <div class="footer__left_content">
+                <h3>Address</h3>
+                <p>Kyambogo, Gloucester Ave</p>
+                <p>Kampala, Uganda</p>
+                <p>Phone: +256 414-671387</p>
+                <p><a href="/cdn-cgi/l/email-protection#4920272f26093c20392c672a26673c2e"><span class="__cf_email__"
+                            data-cfemail="ef86818980af9a869f8ac18c80c19a88">[email&#160;protected]</span></a></p>
             </div>
-            <div class="footer__center">
-                <div class="footer__right-quicklinks">
-                    <h3>Associated Links</h3>
-                    <ul>
-                        <li><a href="https://www.erb.go.ug/">Engineers Registration Board</a></li>
-                        <li><a href="https://ursb.go.ug/">Uganda Registration Services Bureau</a></li>
-                        <li><a href="https://www.unbs.go.ug/">Uganda National Bureau of Sandards</a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="footer-bottom">
+        <div class="footer__center">
+            <div class="footer__right-quicklinks">
+                <h3>Associated Links</h3>
+                <ul>
+                    <li><a href="https://www.erb.go.ug/">Engineers Registration Board</a></li>
+                    <li><a href="https://ursb.go.ug/">Uganda Registration Services Bureau</a></li>
+                    <li><a href="https://www.unbs.go.ug/">Uganda National Bureau of Sandards</a></li>
+                </ul>
             </div>
-            <div class="footer__right">
-                <div class="footer__right-quicklinks">
-                    <h3>Sponsored By</h3>
-                    <ul>
-                        <li style="margin-bottom: 2rem"><a href="https://raeng.org.uk//"><img
-                                    src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/rae.webp" alt=""
-                                    style="width: auto; height: 80px"></a></li>
-                        <li style="width: 100%"><a href="https://www.uws.ac.uk/"><img
-                                    src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/uws.png" alt=""
-                                    style="width: auto; height: 80px"></a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="footer__right">
+            <div class="footer__right-quicklinks">
+                <h3>Sponsored By</h3>
+                <ul>
+                    <li style="margin-bottom: 2rem"><a href="https://raeng.org.uk//"><img
+                                src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/rae.webp" alt=""
+                                style="width: auto; height: 80px"></a></li>
+                    <li style="width: 100%"><a href="https://www.uws.ac.uk/"><img
+                                src="https://ams3.digitaloceanspaces.com/uipe-data/static/img/uws.png" alt=""
+                                style="width: auto; height: 80px"></a></li>
+                </ul>
             </div>
-        </footer>
+        </div>
+        </div>
+    </footer>
         <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 </body>
 
